[package]
name = "attribution-macros"
version = "0.1.0"
authors = ["Timothy Flowers <t_chuck_flowers@yahoo.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
attribution-types = { path = "../attribution-types" }
proc-macro2 = "0.4.30"
quote = "0.6.12"
shrinkwraprs = "0.2.1"
syn = { version = "0.15.39", features = ["full"] }