[package]
name = "attribution-macros"
version = "0.4.0"
authors = ["Timothy Flowers <t_chuck_flowers@yahoo.com>"]
description = "The macros used by the attribution crate"
categories = ["development-tools::procedural-macro-helpers"]
keywords = ["attribute", "parsing"]
readme = "./README.md"
edition = "2018"
repository = "https://github.com/chuck-flowers/attribution"
license = "MIT"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "^1.0.0"
quote = "^1.0.0"
syn = { version = "^1.0.0", features = ["full"] }

[dev-dependencies]
syn = { version = "^1.0.0", features = ["extra-traits", "full"] }
