[package]
name = "attribution"
version = "0.1.0"
authors = ["Timothy Flowers <t_chuck_flowers@yahoo.com>"]
description = "A declarative custom attribute parsing framework"
categories = ["development-tools::procedural-macro-helpers"]
keywords = ["attribute", "parsing"]
readme = "../README.md"
edition = "2018"
repository = "https://github.com/chuck-flowers/attribution"
license = "MIT"

[dependencies]
attribution-macros = { version = "0.1.0", path = "../attribution-macros" }
proc-macro2 = "0.4.30"
shrinkwraprs = "0.2.1"
syn = "0.15.41"

[dev-dependencies]
quote = "0.6.13"

[[example]]
name = "ez_trace"
crate-type = ["proc-macro"]
