[package]
name = "attribution"
version = "0.2.1"
authors = ["Timothy Flowers <t_chuck_flowers@yahoo.com>"]
description = "A declarative custom attribute parsing framework"
categories = ["development-tools::procedural-macro-helpers"]
keywords = ["attribute", "parsing"]
readme = "../README.md"
edition = "2018"
repository = "https://github.com/chuck-flowers/attribution"
license = "MIT"

[dependencies]
attribution-macros = { version = "0.2.1", path = "../attribution-macros" }
proc-macro2 = "^1.0.0"
quote = "^1.0.0"
shrinkwraprs = "0.2.1"
syn = { version = "^1.0.0", features = ["full"] }
